--- a/Natours/sass/abstract/_variables.scss
+++ b/Natours/sass/abstract/_variables.scss
@@ -1,7 +1,19 @@
+// COLORS
 $color-primary: #55C57A;
 $color-primary-light: #7ED56F;
 $color-primary-dark: #28B485;
 
+$color-grey-light-1: #F7F7F7;
+
 $color-grey-dark: #777;
 $color-white: #FFF;
 $color-black: #000;
+
+// FONT
+$default-font-size: 1.6rem;
+
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
