--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -1,14 +1,21 @@
+// ABSTRACT
+@import 'abstract/variables';
 @import 'abstract/functions';
 @import 'abstract/mixins';
-@import 'abstract/variables';
 
+// BASE
 @import 'base/base';
-@import 'base/animation';
 @import 'base/typography';
 @import 'base/utilities';
+@import 'base/animation';
 
+// COMPONENTS
+@import 'components/buttons';
+@import 'components/composition';
+
+// PAGES
 @import 'pages/homes';
 
+// LAYOUT
 @import 'layout/header';
-
-@import 'components/buttons';
+@import 'layout/grid';
