Section - Video complete

--- a/Natours/sass/abstract/_variables.scss
+++ b/Natours/sass/abstract/_variables.scss
@@ -3,7 +3,14 @@ $color-primary: #55C57A;
 $color-primary-light: #7ED56F;
 $color-primary-dark: #28B485;
 
+$color-secondary-light: #FFB900;
+$color-secondary-dark: #FF7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5634FA;
+
 $color-grey-light-1: #F7F7F7;
+$color-grey-light-2: #EEE;
 
 $color-grey-dark: #777;
 $color-white: #FFF;
