--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -10,8 +10,12 @@
 @import 'base/animation';
 
 // COMPONENTS
+@import 'components/bg-video';
 @import 'components/buttons';
+@import 'components/card';
 @import 'components/composition';
+@import 'components/feature-box';
+@import 'components/story';
 
 // PAGES
 @import 'pages/homes';
