--- a/Natours/sass/components/_buttons.scss
+++ b/Natours/sass/components/_buttons.scss
@@ -51,7 +51,15 @@
             background-color: $color-white;
             color: $color-grey-dark;
         }
+    }
 
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+        &::after {
+            background-color: $color-primary;
+            color: $color-white;
+        }
     }
 }
 
