--- a/Natours/sass/abstract/_variables.scss
+++ b/Natours/sass/abstract/_variables.scss
@@ -12,7 +12,10 @@ $color-tertiary-dark: #5634FA;
 $color-grey-light-1: #F7F7F7;
 $color-grey-light-2: #EEE;
 
-$color-grey-dark: #777;
+$color-grey-dark-1: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
 $color-white: #FFF;
 $color-black: #000;
 
