--- a/Natours/sass/components/_buttons.scss
+++ b/Natours/sass/components/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -9,6 +10,10 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // Change for the <button> tag
+        border: none;
+        cursor: pointer;;
     }
 
     &:hover {
@@ -20,7 +25,9 @@
         }
     }
 
+    &:focus,
     &:active {
+        outline: none;
         transform: translateY(-.1rem);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
@@ -46,10 +53,10 @@
 
     &--white {
         background-color: $color-white;
-        color: $color-grey-dark;
+        color: $color-grey-dark-1;
         &::after {
             background-color: $color-white;
-            color: $color-grey-dark;
+            color: $color-grey-dark-1;
         }
     }
 
