Natours full built

--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -145,11 +145,8 @@
     // BACK SIDE STLYING
     &__cta {
         width: 90%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
         text-align: center;
-        transform: translate(-50%, -50%);
+        @include absCenter;
     }
 
     &__price-box {
