--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'components/composition';
 @import 'components/feature-box';
 @import 'components/form';
+@import 'components/popup';
 @import 'components/story';
 
 // PAGES
@@ -25,3 +26,4 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/grid';
+@import 'layout/navigation';
