--- a/Natours/sass/abstract/_variables.scss
+++ b/Natours/sass/abstract/_variables.scss
@@ -25,5 +25,7 @@ $default-font-size: 1.6rem;
 
 // GRID
 $grid-width: 114rem;
+$grid-width-tab: 50rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+$gutter-vertical-small: 6rem;
