--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark-1;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -18,6 +17,10 @@ body {
         font-weight: 700;
         letter-spacing: 3.5rem;
         animation: moveInLeft 1s ease-in-out;
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;   
+        }
     }
 
     &--sub {
@@ -27,6 +30,9 @@ body {
         margin-left: -1rem;
         letter-spacing: 1.7rem;
         animation: moveInRight 1s ease-in-out;
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -46,6 +52,14 @@ body {
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     } 
 
+    @include respond(tab-port) {
+        font-size: 3rem;
+        max-width: $grid-width-tab;
+    }
+    
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 }
 
 .heading-tertiary {
