--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -5,7 +5,7 @@
     -moz-perspective: 150rem;
     position: relative;
     height: 52rem;
-    
+
     &__side {
         height: 52rem;
         transition: all .8s ease;
@@ -164,4 +164,53 @@
         font-size: 6rem;
         font-weight: 100;
     }
+
+    // @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em), 
+           only screen and (hover: none) {
+        height: auto;
+        border-radius: .3rem;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &--back {
+                height: auto;
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1rem 3rem;
+        }
+
+        // BACK SIDE STLYING
+        &__cta {
+            position: relative;
+            width: 100%;
+            text-align: center;
+            top: 0%;
+            left: 0%;
+            transform: translate(0, 0);
+            padding: 7rem 4rem 4rem 4rem;
+        }
+
+        &__price-box {
+            margin-bottom: 3rem;
+        }
+
+        &__price-value {
+            font-size: 4rem;
+        }
+    }
+
 }
