--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -4,11 +4,17 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba($color-black, .95);
+    background-color: rgba($color-black, .9);
     z-index: 9999;
     visibility: hidden;
     opacity: 0;
     transition: all .3s;
+
+    @supports(-webkit-backdrop-filter: blur(1rem)) or (backdrop-filter: blur(1rem)) {
+        -webkit-backdrop-filter: blur(1rem);
+        backdrop-filter: blur(1rem);
+        background-color: rgba($color-black, .3);
+    }
 
     &:target {
         opacity: 1;
