--- a/Nexter/sass/_header.scss
+++ b/Nexter/sass/_header.scss
@@ -1,4 +1,58 @@
 .header {
-    background-color: $color-grey-dark-1;
     grid-column: full-start / col-end 6;
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: full-start / full-end;   
+    }
+    @media only screen and (max-width: $bp-small) {
+        padding: 5rem;
+    }
+    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url('../img/hero.jpeg');
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-columns: minmax(min-content, max-content);
+    justify-content: center;
+    grid-row-gap: 1.5rem;
+    padding: 8rem;
+    padding-top: 4rem;
+
+    &__btn {
+        align-self: start;
+        justify-self: start;
+    }
+
+    &__logo {
+        height: 3rem;
+        justify-self: center;
+    }
+
+    &__seenon-text {
+        display: grid;
+        font-size: 1.6rem;
+        grid-template-columns: 1fr max-content 1fr;
+        color: $color-grey-light-2;
+        align-items: center;
+        grid-column-gap: 1.5rem;
+        &::before,
+        &::after {
+            content: '';
+            height: .1rem;
+            display: block;
+            background-color: currentColor;
+        }
+    }
+
+    &__seenon-logos {
+        display: grid;
+        align-items: center;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 3rem;
+        justify-items: center;
+        img {
+            max-height: 2.5rem;
+            max-width: 100%;
+            filter: brightness(70%);
+        }
+    }
 }
