--- a/Nexter/sass/_realtors.scss
+++ b/Nexter/sass/_realtors.scss
@@ -1,4 +1,45 @@
 .realtors {
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: full-start / full-end;   
+    }
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+        margin-bottom: 5vh;
+        @media only screen and  (max-width: $bp-medium) {   
+            margin-bottom: 2.5vh;
+        }     
+    }
+    
+    &__list {
+        display: grid;
+        grid-template-columns: min-content max-content;
+        grid-column-gap: 2rem;
+        grid-row-gap: 5vh;
+        align-items: center;
+        @media only screen and (max-width: $bp-medium) {        
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: min-content max-content;
+        }
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        display: block;
+    }
+
+    &__sold {
+        text-transform: uppercase;
+        color: $color-grey-light-1;
+        margin-top: -.3rem;
+    }
 }
