--- a/Nexter/sass/_story.scss
+++ b/Nexter/sass/_story.scss
@@ -2,6 +2,11 @@
     &__pictures {
         grid-column: full-start / col-end 4;
         display: grid;
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: full-start / full-end;
+            padding: 6rem;
+        }
+        background-size: cover;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(6, 1fr);
         align-items: center;
@@ -13,6 +18,11 @@
         grid-column: 2 / 6;
         grid-row: 2 / 6;
         box-shadow: 0 2rem 5rem rgba(#000, .1);
+        @media only screen and (max-width: $bp-medium) {        
+            grid-column: 1 / 5;
+            grid-row: 1 / -1;
+            width: 100%;
+        }
     }
 
     &__img--2 {
@@ -21,12 +31,20 @@
         grid-column: 4 / 7;
         grid-row: 4 / 6;
         box-shadow: 0 2rem 5rem rgba(#000, .2);
+        @media only screen and (max-width: $bp-medium) {
+            width: 100%;
+            grid-row: 1 / -1;
+        }
     }
 
     &__content {
         background-color: $color-grey-light-1;
         grid-column: col-start 5 / full-end;
         padding: 6rem 8vw;
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: full-start / full-end;
+            grid-row: 5 / 6;
+        }
         display: flex;
         flex-direction: column;
         justify-content: center;
